calender shift bug fix

--- a/src/app/pages/bookvitals/calender-shifts/calender-shifts.page.scss
+++ b/src/app/pages/bookvitals/calender-shifts/calender-shifts.page.scss
@@ -224,7 +224,7 @@ ion-content {
   }
 }
 .emptyspace {
-  height: 68px;
+  height: 85px;
 }
 .selectlabel {
   font-style: normal;
